# rustjet

./: .env.example  .gitignore  .openapi-generator-ignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  RegiojetNL3-regio-jet_api-1.1.0-resolved.yaml  config.toml.example  flake.nix  justfile  regiojet-1.2.0.yaml  rustjet.code-workspace
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  rust.yml
.openapi-generator/: FILES
crates/regiojet-api/: Cargo.toml
crates/regiojet-api/src/: lib.rs
crates/regiojet-api/src/apis/: accounts_api.rs  addons_api.rs  apple_wallet_api.rs  configuration.rs  identities_api.rs  mod.rs  (+5 more)
crates/rustjet-cli/: Cargo.toml
crates/rustjet-cli/src/: bot.rs
crates/rustjet-core/: Cargo.toml
crates/rustjet-core/src/: lib.rs
crates/rustjet-core/src/adapters/: json_storage.rs  mod.rs  regiojet.rs  telegram.rs  telegram_webapp.rs
crates/rustjet-core/src/bot/: config.rs  handlers.rs  mod.rs  notifications.rs  state.rs  tickets.rs
crates/rustjet-core/src/domain/: mod.rs
crates/rustjet-core/src/ports/: mod.rs
crates/rustjet-core/src/services/: mod.rs  tickets.rs
crates/rustjet-core/src/storage/: credentials.rs
crates/rustjet-core/tests/: integration_test.rs
crates/rustjet-web/: .gitignore  Cargo.toml  build.js  package-lock.json  package.json  tsconfig.json
crates/rustjet-web/src/: app.ts  auth.rs  lib.rs  main.rs  routes.rs  state.rs  telegram.d.ts
crates/rustjet-web/static/: app.js  index.html  styles.css
crates/rustjet-web/tests/: api_test.rs
crates/rustjet-web/tests/common/: mod.rs
docs/: AccessoryType.md  AccountTimeTickets.md  AccountTypeResponse.md  AccountsApi.md  ActionPrice.md  AddGiftCertificateRequest.md  AddonConditionsDescriptions.md  AddonsApi.md  AddonsVerifyRequest.md  AllowedPaymentDefinition.md  AmountCurrency.md  AppleWalletApi.md  ApplicationOrigin.md  ArrivalConnection.md  ArrivalConnectionStation.md  ArrivalDepartureConnection.md  ArrivalDepartureConnectionStation.md  AvailableAddon.md  AvailableAddonConditions.md  AvailableAddonsRequest.md  BannerBubble.md  Buyer.md  CancelCharge.md  CancelTicketRequest.md  Carrier.md  ChangeMojeid.md  ChangePasswordRequest.md  ChangeUserRequest.md  ChargeRequest.md  ChargeResponse.md  City.md  CityPair.md  CodeDiscount.md  Company.md  ConstsApi.md  ContactFormRequest.md  ContentApi.md  Country.md  CreateRegisteredTicketRequest.md  CreateRegisteredTimeTicketsRequest.md  (+195 more)
scripts/: regenerate-api.sh
src/: lib.rs
src/apis/: addons_api.rs  configuration.rs  consts_api.rs  content_api.rs  devices_api.rs  discounts_api.rs  mod.rs  others_api.rs  payments_api.rs  price_list_api.rs  routes_api.rs  seat_reservation_only_tickets_api.rs  tickets_api.rs  time_tickets_api.rs  users_api.rs
src/bot/: config.rs  handlers.rs  mod.rs  notifications.rs  state.rs  tickets.rs
src/models/: action_price.rs  add_gift_certificate_request.rs  addon_conditions_descriptions.rs  addons_verify_request.rs  application_origin.rs  arrival_connection_station.rs  arrival_departure_connection.rs  arrival_departure_connection_station.rs  available_addon.rs  available_addon_conditions.rs  available_addons_request.rs  banner_bubble.rs  buyer.rs  cancel_charge.rs  cancel_ticket_request.rs  carrier.rs  change_mojeid.rs  change_password_request.rs  change_user_request.rs  charge_request.rs  charge_response.rs  city.rs  city_pair.rs  code_discount.rs  company.rs  contact_form_request.rs  country.rs  create_registered_ticket_request.rs  create_ticket_request.rs  create_ticket_response_registered.rs  create_ticket_response_unregistered.rs  create_ticket_route_request.rs  create_ticket_section_request.rs  create_unregistered_ticket_request.rs  create_unregistered_ticket_request_affiliate.rs  credit_add_request.rs  credit_add_response.rs  currency.rs  customer_actions.rs  delete_passenger_request.rs  (+122 more)
src/storage/: credentials.rs
tests/: integration_test.rs
(+117 files in other folders)
