[package]
name = "rustjet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.2.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
teloxide = { version = "0.9.2", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "^0.6", features = ["codec"] }
url = "^2.2"

[profile.release]
debug = true
lto = true
opt-level = 3
