[package]
name = "rustjet"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.5"

[profile.release]
debug = true
lto = true
opt-level = 3
