[package]
name = "rustjet-core"
version = "0.1.0"
edition = "2024"

[dependencies]
regiojet-api = { path = "../regiojet-api" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
toml = "0.9"
tracing = "0.1"

[dev-dependencies]
mockito = "1.5"
rand = "0.9"
tokio-test = "0.4"
