[package]
name = "rustjet-web"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustjet_web"
path = "src/lib.rs"

[[bin]]
name = "rustjet-web"
path = "src/main.rs"

[dependencies]
rustjet-core = { path = "../rustjet-core" }
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
axum-test = "18"
